--- a/.github/workflows/build-engine.yml
+++ b/.github/workflows/build-engine.yml
@@ -8,10 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 检出图纸库
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: 配置 Java 和 Android 环境
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
@@ -20,10 +20,9 @@ jobs:
       - name: 动态注入自定义功能
         run: |
           # 这一步会根据 Vercel 传来的参数进行定制
-          # 例如：修改 App 名称、注入广告过滤网址、配置悬浮按钮
           python3 scripts/apply_customization.py \
             --url "${{ github.event.client_payload.target_url }}" \
-            --ad_rules "${{ github.event.client_payload.ad_rules_url }}" \
+            --ad_rules "${{ github.event.client_payload.ad_rules }}" \
             --app_name "${{ github.event.client_payload.app_name }}"
 
       - name: 锻造真正的 APK
@@ -32,7 +31,7 @@ jobs:
           ./gradlew assembleDebug
 
       - name: 交付成品
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ github.event.client_payload.app_name }}_Finished
           path: app/build/outputs/apk/debug/app-debug.apk
