--- a/.github/workflows/build-engine.yml
+++ b/.github/workflows/build-engine.yml
@@ -10,23 +10,44 @@ jobs:
       - name: 检出图纸库
         uses: actions/checkout@v4
 
+      - name: 配置 Node.js 环境 (准备原材料)
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
       - name: 配置 Java 和 Android 环境
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: 'gradle'
+          # 删除了 cache: 'gradle'，因为它会导致空仓库报错
 
-      - name: 动态注入自定义功能
+      - name: 自动生成 Android 骨架并注入网址
         run: |
-          # 这一步会根据 Vercel 传来的参数进行定制
-          python3 scripts/apply_customization.py \
-            --url "${{ github.event.client_payload.target_url }}" \
-            --ad_rules "${{ github.event.client_payload.ad_rules }}" \
-            --app_name "${{ github.event.client_payload.app_name }}"
+          npm init -y
+          npm install @capacitor/core @capacitor/cli @capacitor/android
+          
+          # 创建占位网页目录
+          mkdir www && echo "<html><body>Loading...</body></html>" > www/index.html
+          
+          # 核心：动态生成配置文件，将 App 内核直接指向 Vercel 传来的目标网址
+          echo '{
+            "appId": "com.reality.app",
+            "appName": "${{ github.event.client_payload.app_name }}",
+            "webDir": "www",
+            "server": {
+              "url": "${{ github.event.client_payload.target_url }}",
+              "cleartext": true
+            }
+          }' > capacitor.config.json
+
+          # 初始化安卓工程
+          npx cap add android
+          npx cap sync android
 
       - name: 锻造真正的 APK
         run: |
+          cd android
           chmod +x gradlew
           ./gradlew assembleDebug
 
@@ -34,4 +55,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ github.event.client_payload.app_name }}_Finished
-          path: app/build/outputs/apk/debug/app-debug.apk
+          path: android/app/build/outputs/apk/debug/app-debug.apk
