--- a/.github/workflows/build-engine.yml
+++ b/.github/workflows/build-engine.yml
@@ -15,12 +15,11 @@ jobs:
         with:
           node-version: '20'
 
-      - name: 配置 Java 和 Android 环境
+      - name: 配置 Java 和 Android 环境 (升级为 Java 21)
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21' # <--- 核心修复：升级到了 21
           distribution: 'temurin'
-          # 删除了 cache: 'gradle'，因为它会导致空仓库报错
 
       - name: 自动生成 Android 骨架并注入网址
         run: |
