--- a/.github/workflows/build-engine.yml
+++ b/.github/workflows/build-engine.yml
@@ -1,7 +1,7 @@
 name: Production Factory Engine
 on:
   repository_dispatch:
-    types: [start_build] # 接收来自 Vercel 的生产指令
+    types: [start_build]
 
 jobs:
   build_android:
@@ -15,10 +15,10 @@ jobs:
         with:
           node-version: '20'
 
-      - name: 配置 Java 和 Android 环境 (升级为 Java 21)
+      - name: 配置 Java 和 Android 环境
         uses: actions/setup-java@v4
         with:
-          java-version: '21' # <--- 核心修复：升级到了 21
+          java-version: '21'
           distribution: 'temurin'
 
       - name: 自动生成 Android 骨架并注入网址
@@ -29,7 +29,7 @@ jobs:
           # 创建占位网页目录
           mkdir www && echo "<html><body>Loading...</body></html>" > www/index.html
           
-          # 核心：动态生成配置文件，将 App 内核直接指向 Vercel 传来的目标网址
+          # 动态生成核心配置，直连你的目标网址
           echo '{
             "appId": "com.reality.app",
             "appName": "${{ github.event.client_payload.app_name }}",
@@ -47,6 +47,20 @@ jobs:
       - name: 锻造真正的 APK
         run: |
           cd android
+          
+          # 【终极防线】：强制统一 Kotlin 版本，解决 Duplicate class 冲突
+          cat <<EOT >> app/build.gradle
+          
+          configurations.all {
+              resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+                  def requested = details.requested
+                  if (requested.group == 'org.jetbrains.kotlin' && requested.name == 'kotlin-stdlib-jdk8') {
+                      details.useVersion '1.8.22'
+                  }
+              }
+          }
+          EOT
+          
           chmod +x gradlew
           ./gradlew assembleDebug
 
